add Notifications functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
 
 
     <!-- - - - - - - - - - - - - - - -
-      - Used by SunshinePreferences  -
+      - UsedWeatherPreferencesnces  -
       - - - - - - - - - - - - - - - -->
 
     <!-- Label for the location preference -->
